fix(header): spacing

--- a/styles/scss/gbarbosa.store-selector.scss
+++ b/styles/scss/gbarbosa.store-selector.scss
@@ -115,8 +115,8 @@
 }
 .openButtonLabel {
   color: #ffffff;
-  font-size: 12px;
-  font-weight: bold;
+  font-size: 13px;
+  font-weight: 500;
   white-space: nowrap;
   @media (max-width: 1024px) {
     color: #898989;
