--- a/styles/scss/vtex.rich-text.scss
+++ b/styles/scss/vtex.rich-text.scss
@@ -3639,7 +3639,7 @@
       color: #fff;
       font-size: 13px;
       white-space: nowrap;
-      margin: 0px 26px;
+      margin: 0px 13px;
     }
   }
 }
